# bakrep-cli

./: .gitignore  README.md  setup.cfg  setup.py
bakrep/: cli.py  download.py  model.py
test/: test_dataset.py  test_download.py  test_download_command.py  test_downloadset.py  test_path_for_id.py
test/data/scenarios/download-dataset/: SAMEA3231284.json
