[metadata]
name = bakrep-cli
author = Lukas Jelonek
author-email = lukas.jelonek@computational.bio.uni-giessen.de
description = Bakrep dataset download tool
description-file = README.md
project_urls =
    Source Code = https://github.com/ag-computational-bio/bakrep-cli
keywords = tools, bakrep, cli, download

[files]
packages = 
    bakrep

[entry_points]
console_scripts = 
    bakrep = bakrep.cli:main
